<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context="com.example.lion.tetris.activity.MenuActivity">

    <Button
        android:id="@+id/buttonPlay"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:elevation="0dp"
        android:fontFamily="@font/ka1"
        android:text="@string/menu_play"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSettings"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:fontFamily="@font/ka1"
        android:text="@string/menu_settings"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHighscores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <Button
        android:id="@+id/buttonHighscores"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:fontFamily="@font/ka1"
        android:text="@string/menu_highscores"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

    <Button
        android:id="@+id/buttonLogout"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:elevation="0dp"
        android:fontFamily="@font/ka1"
        android:text="@string/menu_logout"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
